unpackaged/objects/copado__JobTemplate__c.object
<CustomObject>
	<description>A job template is a reusable template with a list of steps that can be executed as part of different processes such as a commit, a promotion or a deployment.</description>
	<fields>
		<fullName>copado__ApiName__c</fullName>
		<description>API name of the job that triggered the result.</description>
		<externalId>true</externalId>
		<label>API Name</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Description__c</fullName>
		<description>A description of the job template.</description>
		<label>Description</label>
		<length>32768</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<defaultValue>&apos;Custom&apos;</defaultValue>
		<description>Type of Job Template</description>
		<label>Type</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Standard</fullName>
				</value>
				<value>
					<fullName>Custom</fullName>
					<default>true</default>
					<label>Custom</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Version__c</fullName>
		<defaultValue>1</defaultValue>
		<description>The version of the Job Template.</description>
		<label>Version</label>
		<precision>18</precision>
		<required>true</required>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__VolumeOptions__c</fullName>
		<description>A JSON containing transaction and volume options.</description>
		<inlineHelpText>A JSON containing transaction and volume options</inlineHelpText>
		<label>VolumeOptions</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<label>Job Template</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Version__c</columns>
		<columns>copado__Type__c</columns>
		<columns>copado__ApiName__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Job Template Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Job Templates</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>